#pragma once

namespace disruptor {
    template<typename T, size_t N>
    class Disruptor {
    };
}
